new build with image names changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 	</span>
 </mat-toolbar>
 <mat-toolbar class="flex-container-header mat-elevation-z5" color="primary" style="height:200px;">
-	<img class="logo" src="/assets/logo.png">
+	<img class="logo" src="./assets/logo.png">
 	<div class="title">
 		<h3 class="mat-subheading-2">SHIKSHAN MAHARSHI DR. D.Y. PATIL SHIKSHAN SANSTHA'S</h3>
 		<h1 class="mat-display-4">DR. D. Y. PATIL SENIOR COLLEGE</h1>
