admission component initiated

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -167,42 +167,42 @@
   					<div class="img-container"></div>
   					<img class="as-img" src="./assets/as-img1.jpg">
   					<div class="text-block">
-    					<p>Dr. D.Y. Patil Senior College</p>
+    					<p style="font-size: 10px;">Dr. D.Y. Patil Senior College</p>
   					</div>
   				</mat-grid-tile>
   				<mat-grid-tile>
   					<div class="img-container"></div>
   					<img class="as-img" src="./assets/as-img2.jpg">
   					<div class="text-block">
-    					<p>Dr. D.Y. Patil English Medium School(State Board)</p>
+    					<p style="font-size: 10px;">Dr. D.Y. Patil English Medium School(State Board)</p>
   					</div>
   				</mat-grid-tile>
   				<mat-grid-tile>
   					<div class="img-container"></div>
   					<img class="as-img" src="./assets/as-img3.jpg">
   					<div class="text-block">
-    					<p>Dr. D.Y. Patil Centre for Management and Research(MBA)</p>
+    					<p style="font-size: 10px;">Dr. D.Y. Patil Centre for Management and Research(MBA)</p>
   					</div>
   				</mat-grid-tile>
   				<mat-grid-tile>
   					<div class="img-container"></div>
   					<img class="as-img" src="./assets/as-img4.jpg">
   					<div class="text-block">
-    					<p>Dr. D.Y. Patil Buds International School(CBSC)</p>
+    					<p style="font-size: 10px;">Dr. D.Y. Patil Buds International School(CBSC)</p>
   					</div>
   				</mat-grid-tile>
   				<mat-grid-tile>
   					<div class="img-container"></div>
   					<img class="as-img" src="./assets/as-img5.jpg">
   					<div class="text-block">
-    					<p>DYPSS Hostel</p>
+    					<p style="font-size: 10px;">DYPSS Hostel</p>
   					</div>
   				</mat-grid-tile>
   			<mat-grid-tile>
   				<div class="img-container"></div>
   				<img class="as-img" src="./assets/as-img6.jpg">
   				<div class="text-block">
-    				<p>Dr. D.Y. Patil Sports Academy</p>
+    				<p style="font-size: 10px;">Dr. D.Y. Patil Sports Academy</p>
   				</div>
   			</mat-grid-tile>
 		</mat-grid-list>		
