--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -49,11 +49,6 @@
 							<td>:</td>
 							<td>20000</td>
 						</tr>
-						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
-						</tr>
 					</table>
 			</mat-card-content>
 		</mat-card>
@@ -80,31 +75,41 @@
 		</mat-card>
 		<mat-card style="margin-bottom: 10px;">
 			<mat-card-header>
-				<mat-card-title class="mat-title">Land and Building</mat-card-title>
+				<mat-card-title class="mat-title">Teaching / Learning</mat-card-title>
 			</mat-card-header>
 			<mat-card-content class="infratable">
 					<table style="width: 50%;">
 						<tr>
-							<td>Build Up Area (in Sq. ft.)</td>
+							<td>No. of Class Rooms</td>
 							<td>:</td>
-							<td>16146</td>
+							<td>3</td>
 						</tr>
 						<tr>
-							<td>Land Area (in Acres)</td>
+							<td>No. of Tutorial Rooms</td>
 							<td>:</td>
 							<td>1</td>
+						</tr>
+						<tr>
+							<td>No. of Laboratories</td>
+							<td>:</td>
+							<td>2</td>
 						</tr>
 					</table>
 					<table style="width:50%;">
 						<tr>
-							<td>Play ground/Sports/games Area (in Sq. ft.)</td>
+							<td>No. of Seminar Rooms</td>
 							<td>:</td>
-							<td>20000</td>
+							<td>1</td>
 						</tr>
 						<tr>
-							<td></td>
-							<td></td>
-							<td></td>
+							<td>No. of Conference Rooms</td>
+							<td>:</td>
+							<td>1</td>
+						</tr>
+						<tr>
+							<td>No. of Committee Rooms</td>
+							<td>:</td>
+							<td>1</td>
 						</tr>
 					</table>
 			</mat-card-content>
