--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 		<a id="tab-buttons" routerLink="" routerLink="/home" routerLinkActive="active" mat-button>Home</a>
 		<a id="tab-buttons" routerLink="/about" routerLinkActive="active" mat-button>About Us</a>
 		<a id="tab-buttons" routerLink="/academics" routerLinkActive="active" mat-button>Academics</a>
-		<button id="tab-buttons" mat-button>Admissions</button>
+		<a id="tab-buttons" routerLink="/admission" routerLinkActive="active" mat-button>Admission</a>
 		<a id="tab-buttons" routerLink="/contact" routerLinkActive="active" mat-button>Reach Us</a>
 	</span>
 </mat-toolbar>
