--- a/src/app/admission/admission.component.html
+++ b/src/app/admission/admission.component.html
@@ -1,3 +1,49 @@
-<p>
-  admission works!
-</p>
+<div class="doc-container" style="margin-bottom: 20px;">
+	<div class="doc=content">
+		<mat-card>
+			<mat-card-header>
+				<p class="mat-title">Courses and In-take</p>
+			</mat-card-header>
+			<mat-card-content>
+				<table>
+					<tr>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Faculty</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Course Level</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Approved Courses</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Duration</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Started</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">In-take</p></td>
+						<td><p class="mat-body-1" style="color: #00BCD4; font-weight: 700;">Admissions</p></td>
+					</tr>
+					<tr>
+						<td>Commerce</td>
+						<td>Graduate</td>
+						<td>B.C.A.(Computer Application)</td>
+						<td>3 Years</td>
+						<td>2009-2010</td>
+						<td>80</td>
+						<td>79</td>
+					</tr>
+					<tr>
+						<td>Commerce</td>
+						<td>Graduate</td>
+						<td>B.Com</td>
+						<td>3 Years</td>
+						<td>2017-2018</td>
+						<td>120</td>
+						<td>118</td>
+					</tr>
+					<tr>
+						<td>Science</td>
+						<td>Graduate</td>
+						<td>B.Sc</td>
+						<td>3 Years</td>
+						<td>2009-2010</td>
+						<td>120</td>
+						<td>30</td>
+					</tr>
+				</table>
+			</mat-card-content>
+		</mat-card>
+	</div>
+</div>
