--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -114,7 +114,7 @@
 					</table>
 			</mat-card-content>
 		</mat-card>
-		<mat-card>
+		<mat-card style="margin-bottom: 10px;">
 			<mat-card-header>
 				<mat-card-title class="mat-title">Library</mat-card-title>
 			</mat-card-header>
@@ -145,9 +145,57 @@
 					</table>
 			</mat-card-content>
 		</mat-card>
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title><p class="mat-title">Gallery</p></mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<img src="./assets/infra1.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra2.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra3.jpg" style="flex-grow:1;">
+				</div>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<img src="./assets/infra4.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra5.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra6.jpg" style="flex-grow:1;">
+				</div>
+				<div class="photo-container-row">
+					<img src="./assets/infra7.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra8.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/infra9.jpg" style="flex-grow:1;">
+				</div>
+			</mat-card-content>
+		</mat-card>
 		
 		<div class="section-seperator"></div>
-	
+		
+		<h1 id="activities" class="mat-display-3">Activities</h1>
+		<div class="divider"></div>
+		<mat-card>
+			<mat-card-header>
+				<mat-card-title><p class="mat-title">Gallery</p></mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<img src="./assets/activity1.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/activity2.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/activity3.jpg" style="flex-grow:1;">
+				</div>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<img src="./assets/activity4.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/activity5.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/activity6.jpg" style="flex-grow:1;">
+				</div>
+				<div class="photo-container-row">
+					<img src="./assets/activity7.jpg" style="margin-right: 15px; flex-grow:1;">
+					<img src="./assets/activity8.jpg" style="margin-right: auto; flex-grow:1;">
+				</div>
+			</mat-card-content>
+		</mat-card>
+		
+		<div class="section-seperator"></div>
+		
 		<h1 id="principal-desk" class="mat-display-3">From Principal's Desk</h1>
 		<div class="divider"></div>
 		<div class="flex-box">
@@ -166,52 +214,41 @@
 			
 		<h1 id="about-sanstha" class="mat-display-3">Dr. D.Y. Patil Shikshan Sanstha Group of Educational Campus</h1>
 		<div class="divider"></div>
-		<div style="margin-bottom: 20px;">
-			<mat-grid-list style="margin-top: 30px;" cols="3" rowHeight="2:1">
-  				<mat-grid-tile>
-  					<div class="img-container"></div>
-  					<img class="as-img" src="./assets/as-img1.jpg">
-  					<div class="text-block">
-    					<p style="font-size: 10px;">Dr. D.Y. Patil Senior College</p>
-  					</div>
-  				</mat-grid-tile>
-  				<mat-grid-tile>
-  					<div class="img-container"></div>
-  					<img class="as-img" src="./assets/as-img2.jpg">
-  					<div class="text-block">
-    					<p style="font-size: 10px;">Dr. D.Y. Patil English Medium School(State Board)</p>
-  					</div>
-  				</mat-grid-tile>
-  				<mat-grid-tile>
-  					<div class="img-container"></div>
-  					<img class="as-img" src="./assets/as-img3.jpg">
-  					<div class="text-block">
-    					<p style="font-size: 10px;">Dr. D.Y. Patil Centre for Management and Research(MBA)</p>
-  					</div>
-  				</mat-grid-tile>
-  				<mat-grid-tile>
-  					<div class="img-container"></div>
-  					<img class="as-img" src="./assets/as-img4.jpg">
-  					<div class="text-block">
-    					<p style="font-size: 10px;">Dr. D.Y. Patil Buds International School(CBSC)</p>
-  					</div>
-  				</mat-grid-tile>
-  				<mat-grid-tile>
-  					<div class="img-container"></div>
-  					<img class="as-img" src="./assets/as-img5.jpg">
-  					<div class="text-block">
-    					<p style="font-size: 10px;">DYPSS Hostel</p>
-  					</div>
-  				</mat-grid-tile>
-  			<mat-grid-tile>
-  				<div class="img-container"></div>
-  				<img class="as-img" src="./assets/as-img6.jpg">
-  				<div class="text-block">
-    				<p style="font-size: 10px;">Dr. D.Y. Patil Sports Academy</p>
-  				</div>
-  			</mat-grid-tile>
-		</mat-grid-list>		
-		</div>
+		<mat-card style="margin-bottom: 20px;">
+			<mat-card-header>
+				<mat-card-title><p class="mat-title">Gallery</p></mat-card-title>
+			</mat-card-header>
+			<mat-card-content>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<div class="photo-container"  style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img1.jpg">
+						<div class="text-block">Dr. D.Y. Patil Senior College</div>
+					</div>
+					<div class="photo-container"  style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img2.jpg">
+						<div class="text-block">Dr. D.Y. Patil English Medium School</div>
+					</div>
+					<div class="photo-container"  style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img3.jpg">
+						<div class="text-block">Dr. D.Y. Patil MBA College</div>
+					</div>															
+				</div>
+				<div style="margin-bottom: 15px;" class="photo-container-row">
+					<div class="photo-container" style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img4.jpg">
+						<div class="text-block">Dr. D.Y. Patil Bud's International School</div>
+					</div>
+					<div class="photo-container" style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img5.jpg">
+						<div class="text-block">DYPSS Hostel</div>
+					</div>
+					<div class="photo-container" style="margin-right: 15px; flex-grow:1;">
+						<img src="./assets/as-img6.jpg">
+						<div class="text-block">Dr. D.Y. Patil Sports Academy</div>
+					</div>					
+				</div>
+			</mat-card-content>
+		</mat-card>
 	</div>
 	
 	<div class="table-of-contents">
@@ -220,6 +257,7 @@
 				<div style="font-size: 13px; font-weight: 700; line-height: 1.7;">Contents<br></div>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('about-college');">About College</a>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('infrastructure');">Infrastructure</a>
+				<a id="content-list-item" mat-list-item (click)="scrollTo('activities');">Activities</a>
 				<a id="content-list-item" mat-list-item (click)="scrollTo('principal-desk');">From Principal's Desk</a>				
 				<a id="content-list-item" mat-list-item (click)="scrollTo('about-sanstha');">About Sanstha</a>
 			</div>
