--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,6 @@
 </div>
 
 <mat-toolbar class="footer mat-elevation-z4">
-	
+		<img class="gmimg" src="./assets/gajananmaharaj.jpg">
 </mat-toolbar>
 
