--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -89,3 +89,10 @@ a.active {
 	height: 150px;
 	display: flex;
 }
+
+.gmimg {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100%;
+    max-height: 95%;
+}
