junior college final commit

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,21 +2,27 @@
 	<div class="doc-content">
 		<h1 id="about-college" class="mat-display-3">About College</h1>
 		<div class="divider"></div>
-		<div class="flex-box">
- 			<div style="margin-right: 30px;">
- 				<p class="mat-body-1">Dr. D.Y. Patil Arts, Commerce and Science College is a distinguished degree College affiliated
- 			 	to the University of Pune. It is situated away from din and bustle of the metropolitan Pune, just a few yards off the
- 			  	Bombay-Pune Highway behind H.D.F.C. Colony, Shaunagar, Chinchwad, Pune.</p>
-				<p class="mat-body-1">In addition to the senior section, the college has junior section, imparting education to F.Y.J.C.
-			 	and S.Y.J.C. in Commerce, Science and Bifocal(Computer Science).</p>
-				<p class="mat-body-1">The college has established in 2011 by S.M. Dr. D.Y. Patil Shikshan Sanstha with the view of
-			 	providing quality education in various courses of studies leading to B.Com, B.Sc, Computer Science, B.C.A. affiliated
-			  	to university of Pune.</p>
-				<p class="mat-body-1">The college has pledged to adopt the tradition of rigorous training, individual attention and
-			 	periodical tested which are unanimously acknowledged as a key to excellent performance yielding positive and encouraging
-			  	results as a result the students maintain commendable results in university exams and return home with laurels
-			   	of victor won in various competitions and tournaments.</p>			
- 			</div>
+		<div>
+			<div>
+				<p class="mat-body-1"><b>Aim</b><br>
+ 				The aim of our college is to provide a supportive and challenging environment in which students acquire knowledge, 
+ 				exercise good citizenship and adhere to high ethical standards. The principle focus of the college's academic 
+ 				program is undergraduate education in selected liberal and pre-professional studies, the the role of teaching is central to the 
+ 				college's mission.</p>
+ 			<p class="mat-body-1"><b>Vision</b><br>
+ 				Our college is committed to develop in young minds the state-of-the-art technology and high academic ambiance by 
+ 				synergistic spiritual and technological competence continually, in a learning environment.
+ 			</p>
+ 			<p class="mat-body-1"><b>Mission</b><br>
+ 				Our mission is to provide an environment that allows future leaders to realize their potential in full and gives 
+ 				them the opportunity to develop  their individuality and skills through education that is backed by cutting-edge 
+ 				research.
+ 			</p>
+ 			<p class="mat-body-1">
+ 				To develop professionals who are committed to their personal and professional endeavors and who have the vision, 
+ 				courage and dedication to initiate and manage the change.
+ 			</p>							
+			</div>
 			<img class="aboutclgimg" src="./assets/aboutclgimg.jpg">
   		</div>
   		
@@ -203,11 +209,11 @@
  				<p class="mat-body-1">I believe in developing responsible citizenship and social responsibility by perception
  				 and example. We provide a friendly and supportive environment that not only enhance the self-esteem of each 
  				 individual but also challenges each to develop understanding skills, abilities and talents to the full. We 
- 				 expect and  Patil Senior College values it's past builds upon its strengths, approaching new as it continuously 
+ 				 expect and  Patil Junior College values it's past builds upon its strengths, approaching new as it continuously 
  				 looks to future.</p>
-				<p class="mat-body-1" style="text-align: right;">Principle<br>Dr. D.Y. Patil Senior College</p>
+				<p class="mat-body-1" style="text-align: right;">Principle<br>Dr. D.Y. Patil Junior College</p>
  			</div>
- 			<img class="principaldeskimg" src="./assets/principaldesk.jpg">
+ 			<img class="principaldeskimg" src="./assets/principle.jpg">
 		</div>
 		
 		<div class="section-seperator"></div>
