--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,9 @@
 	<img class="logo" src="./assets/logo.png">
 	<div class="title-container">
 		<h3 class="mat-subheading-2" id="website-title">SHIKSHAN MAHARSHI DR. D.Y. PATIL SHIKSHAN SANSTHA'S</h3>
-		<h1 class="mat-display-4" id="website-title">DR. D. Y. PATIL ARTS, COMMERCE & SCIENCE COLLEGE</h1>
-		<h4 class="mat-subheading-1" id="website-title">Affiliated to Savitribai Phule Pune University, Approved by AICTE, New Delhi, DTE and Goverment of Maharashtra</h4>
+		<h1 class="mat-display-4" id="website-title">DR. D. Y. PATIL JUNIOR COLLEGE</h1>
+		<h4 class="mat-subheading-1" id="website-title">11th & 12th Science, Commerce, Arts</h4>
+		<h6 class="mat-body-1" style="font-size: 10px;"></h6>
 	</div>
 </mat-toolbar>
 <mat-toolbar class="toolbar-tab-title">
